@@ -1,3 +1,4 @@
+* EVOL country name is not required (country code is enough)
 * EVOL Now stores validator's login on event validation
 
 1.0.2 (2018-11-14)
